; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_ebur128.c_ff_ebur128_loudness_window.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_ebur128.c_ff_ebur128_loudness_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@HUGE_VAL = common dso_local global double 0.000000e+00, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_ebur128_loudness_window(%struct.TYPE_4__* %0, i64 %1, double* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca double*, align 8
  %8 = alloca double, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i64 %1, i64* %6, align 8
  store double* %2, double** %7, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* %6, align 8
  %15 = mul i64 %13, %14
  %16 = udiv i64 %15, 1000
  store i64 %16, i64* %9, align 8
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %18 = load i64, i64* %9, align 8
  %19 = call i32 @ebur128_energy_in_interval(%struct.TYPE_4__* %17, i64 %18, double* %8)
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %10, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %3
  %23 = load i32, i32* %10, align 4
  store i32 %23, i32* %4, align 4
  br label %36

24:                                               ; preds = %3
  %25 = load double, double* %8, align 8
  %26 = fcmp ole double %25, 0.000000e+00
  br i1 %26, label %27, label %31

27:                                               ; preds = %24
  %28 = load double, double* @HUGE_VAL, align 8
  %29 = fneg double %28
  %30 = load double*, double** %7, align 8
  store double %29, double* %30, align 8
  store i32 0, i32* %4, align 4
  br label %36

31:                                               ; preds = %24
  br label %32

32:                                               ; preds = %31
  %33 = load double, double* %8, align 8
  %34 = call double @ebur128_energy_to_loudness(double %33)
  %35 = load double*, double** %7, align 8
  store double %34, double* %35, align 8
  store i32 0, i32* %4, align 4
  br label %36

36:                                               ; preds = %32, %27, %22
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i32 @ebur128_energy_in_interval(%struct.TYPE_4__*, i64, double*) #1

declare dso_local double @ebur128_energy_to_loudness(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
